fix layout problems of the all bikes page when in splitscreen

--- a/app/assets/stylesheets/components/_banner-index.scss
+++ b/app/assets/stylesheets/components/_banner-index.scss
@@ -20,7 +20,6 @@ body, html {
 .results-message {
   justify-content: center;
   text-align: center;
-  height: 64px;
   margin-top: 0px;
   margin-bottom: 40px;
 
